--- a/html/blog.html
+++ b/html/blog.html
@@ -23,12 +23,16 @@
 <div class="centerpiece">
 <div1 style="text-align:center">
 
+<b>2024-06-02</b> <br>
+>main site pages are done, I am free to add to them as I please. Most topics have a page <br><br>
+>small features to add: click-dragons,
+
 <b>2024-05-31</b> <br>
 >WorkList: <br>
->homepage: Center and add side borders <br>
+<s>>homepage: Center and add side borders </s><br>
 <s>>media: decide on structure for review block, do I keep sidebar? </s> <br>
 <s>>blog: center, add side padding </s><br>
->Philosophical Ideas: Turn into directory towards subpages of research topics <br>
+<s>>Philosophical Ideas: Turn into directory towards subpages of research topics </s><br>
 
 <br>
 <b>2024-05-30</b> <br>
