--- a/html/media.html
+++ b/html/media.html
@@ -30,18 +30,18 @@
 		<table>
 			<th><img src="../images/Reviews/fmb-cover.jpg" width=200px></th>
 			
-			<th style="min-width: 200px;">Name: Flying Microtonal Banana <br><br> Date: Feb 24, 2017 <br><br> Creator: King Gizzard & the Lizard Wizard <br><br> score: 10/10 <br><br> Favorite Song: Nuclear Fusion <br><br> </th>
+			<th style="width: 250px;">Name: Flying Microtonal Banana <br><br> Date: Feb 24, 2017 <br><br> Creator: King Gizzard & the Lizard Wizard <br><br> score: 10/10 <br><br> Favorite Song: Nuclear Fusion <br><br> </th>
 
-			<th>>thoughts: a perfect album, a unique sound <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum condimentum fermentum sapien in congue. Ut massa risus, faucibus ac risus eu, facilisis maximus libero. Sed non massa dignissim risus tempus pretium. Curabitur ut arcu in nunc commodo dignissim. Mauris feugiat ligula lectus, at dapibus risus hendrerit quis. Nulla et efficitur nisl. Nam quis quam a ligula rutrum venenatis non eu lectus. Phasellus consectetur convallis mauris sed dictum. Maecenas eleifend turpis eget erat fringilla, nec vehicula tellus imperdiet. Nunc posuere dui non orci fermentum ultrices. Vivamus ornare rutrum consectetur. </th> 
+			<th style="width: 700px;">>thoughts: a perfect album, a unique sound <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum condimentum fermentum sapien in congue. Ut massa risus, faucibus ac risus eu, facilisis maximus libero. Sed non massa dignissim risus tempus pretium. Curabitur ut arcu in nunc commodo dignissim. Mauris feugiat ligula lectus, at dapibus risus hendrerit quis. Nulla et efficitur nisl. Nam quis quam a ligula rutrum venenatis non eu lectus. Phasellus consectetur convallis mauris sed dictum. Maecenas eleifend turpis eget erat fringilla, nec vehicula tellus imperdiet. Nunc posuere dui non orci fermentum ultrices. Vivamus ornare rutrum consectetur. </th> 
 		</table>
 	</td></tr>
 	<tr><td>
 		<table>
 			<th><img src="../images/Reviews/fmab-cover.jpg" width=200px></th>
 			
-			<th style="min-width: 200px;">Name: Fullmetal Alchemist Brotherhood <br><br> Date: April 5, 2009 <br><br> Creator: Hiromu Arakawa, Animated by Bones <br><br> score: 10/10 <br><br> Favorite Character: Riza Hawkeye <br><br> </th>
+			<th style="width: 250px;">Name: Fullmetal Alchemist Brotherhood <br><br> Date: April 5, 2009 <br><br> Creator: Hiromu Arakawa, Animated by Bones <br><br> score: 10/10 <br><br> Favorite Character: Riza Hawkeye <br><br> </th>
 
-			<th>>phenomenal Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum condimentum fermentum sapien in congue. Ut massa risus, faucibus ac risus eu, facilisis maximus libero. Sed non massa dignissim risus tempus pretium. Curabitur ut arcu in nunc commodo dignissim. Mauris feugiat ligula lectus, at dapibus risus hendrerit quis. Nulla et efficitur nisl. Nam quis quam a ligula rutrum venenatis non eu lectus. Phasellus consectetur convallis mauris sed dictum. Maecenas eleifend turpis eget erat fringilla, nec vehicula tellus imperdiet. Nunc posuere dui non orci fermentum ultrices. Vivamus ornare rutrum consectetur.</th> 
+			<th style="width: 700px;">>phenomenal </th> 
 		</table>
 </table>
 
