--- a/html/mythology.html
+++ b/html/mythology.html
@@ -20,17 +20,19 @@
 	</table>
 </div>
 
-<div class="container">
+<div class="centerpiece">
 	
 <div1>
 	<h2>Myths and stories I'd like to explore, or that I find interesting</h2>
-	<h3>The Mahabharata</h3>
-	<h3>The Ramayana</h3>
+	<h3>The Mahabharata - <br>&emsp; <a href="https://www.gutenberg.org/files/19630/19630-h/19630-h.htm">The Mahabharata</a> or try https://mahabharata-online.github.io/</h3>
+	<h3>The Ramayana <br>&emsp; <a href="https://www.gutenberg.org/files/24869/24869-h/24869-h.html">The Ramayana</a></h3>
 	<h3>The Iliad by Homer</h3>
 	<h3>The Odyssey by Homer</h3>
-	<h3>The Aeneid by Virgil</h3>
-	<h3>The Poetic & The Prose Edda</h3>
-	<h3>Beowulf</h3>
+	<h3>The Aeneid by Virgil </h3>
+	<h3>The Poetic & The Prose Edda: <br>&emsp; <a href="https://gutenberg.org/files/14726/14726-h/14726-h.htm">The Elder Eddas of Saemund Sigfusson; and the Younger Eddas of Snorre Sturleson, by Saemund Sigfusson and Snorre Sturleson</a></h3>
+	<h3>Beowulf - Gutenberg: <br> &emsp;<a href="https://www.gutenberg.org/files/16328/16328-h/16328-h.htm">Beowulf
+An Anglo-Saxon Epic Poem, Translated From The Heyne-Socin Text by Lesslie Hall</a> <br> &emsp;<a href="https://www.gutenberg.org/files/50742/50742-h/50742-h.htm">The Story of Beowulf (2015)</h3>
+	<h3>Egyptian Mythology - Thoth</h3>
 </div1>
 
 </div>
