--- a/index.html
+++ b/index.html
@@ -51,13 +51,19 @@
 			<h3>Ideas</h3>
 			<b><a href="html/aesthetic_ideas.html">Aesthetic Ideas</a></b> <br>
 			<b><a href="html/philosophical_ideas.html">Philosophical Ideas</a></b>  <br>
-
+			<b><a href="html/eastern_philosophy.html">Eastern Philosophy</a></b>  <br>
+			<b><a href="html/western_philosophy.html">Western Philosophy</a></b>  <br>
+			
 			<h3>Learning Topics</h3>
 			<b><a href="html/astronomy.html">\Astronomy/</a></b>  <br>
 			<b><a href="html/mythology.html">\Mythology/</a></b>  <br>
-			<b><a href="html/esotericism.html">\Esotericism/</a></b>  <br>
-			<b><a href="html/food.html">\Food/</a></b>  <br>
-			<b><a href="html/exercise.html">\Exercise/</a></b>  <br>
+			<b><a href="html/esotericism.html">\Esotericism/</a></b>  <br><br>
+			
+			<b><a href="html/food.html">Food</a></b>  <br>
+			<b><a href="html/exercise.html">Exercise</a></b>  <br><br>
+
+			<b><a href="html/botany.html">Botany</a></b>  <br>
+			<b><a href="html/fighting-game.html">Fighting Game Wiki</a></b>  <br>
 			<img src="Gifs/shrooms.gif" style="width:300px;"> <br>
 			
 		</div2>
