Expanded character table

--- a/html/media.html
+++ b/html/media.html
@@ -57,6 +57,26 @@
 		<th><img src="../images/Character-Board/faye.jpg" style="height:225px;"> <br>Faye Valentine </th>
 		<th><img src="../images/Character-Board/themajor.jpg" style="height:225px;"> <br>Motoko Kusanagi </th>
 		<th><img src="../images/Character-Board/artemis.jpg" style="height:225px;"> <br>Artemis </th>
+		<th><img src="../images/Character-Board/garou.jpg" style="height:225px;"> <br>Garou </th>
+	</tr>
+	<tr>
+		<th><img src="../images/Character-Board/himeno.jpg" style="height:225px;"> <br>Himeno</th>
+		<th><img src="../images/Character-Board/noi1.png" style="height:225px;"> <br>Noi</th>
+		<th><img src="../images/Character-Board/wiz.jpg" style="height:225px;"> <br>Wiz</th>
+		<th><img src="../images/Character-Board/alma.png" style="height:225px;"> <br>Alma Armas</th>
+	</tr>
+	<tr> <!-- Lower Tier -->
+		<th><img src="../images/Character-Board/guts.jpg" style="height:225px;"> <br>Guts</th>
+		<th><img src="../images/Character-Board/schierke.jpg" style="height:225px;"> <br>Schierke</th>
+		<th><img src="../images/Character-Board/mista.png" style="height:225px;"><br> Mista </th>
+		<th><img src="../images/Character-Board/mia-fey1.jpg" style="height:225px;"> <br>Mia Fey</th>
+	</tr>
+	<tr>
+	<tr>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th></th>
 	</tr>
 </table>
 
@@ -80,6 +100,7 @@
 >Cave Story <br>
 >Risk of Rain 2 <br>
 >Nier Automata <br>
+>Firewatch <br>
 
 <br>
 <b>Anime - <a href="../images/Anime_of_all_time.png">Chart</a></b> <br>
@@ -102,13 +123,27 @@
 >One-Punch Man <br>
 >DanDaDan <br>
 
+<br>
+<b>Characters List</b> <br>
+>Strat1: Breakdown 16 slots <br>
+>Strat2: Min# of slots per category <br>
+>Strat3: If "love" applies, add them <br>
+>Strat4: Do I want to see this character here?
+Do strat3 up until strat1 limit, then write in words <br>
+<br>
+FGC: I-No, Giovanna, Leo Whitefang <br>
 
+Anime: 
+>Kagura, Yomi, Sasaki <br>
+>Any golden boy character <br>
+<br>
 
-
-
+>Anime & Manga: Hawkeye, Misato, Robin, Garou, Wiz, Noi[Nikaido], Himeno, Kagura, Sasaki, Akane<br>
+>Games: Aoko, Artemis, Alma, Mia Fey, FGC, Persona Character <br>
+>Series: Lupin III[Jigen], Jujutsu Kaisen[Todo], Trigun[Milly], Jojo's[Mista], Cowboy Bebop[Faye], Samurai Champloo[Fu] <br>
+>Manga: Guts, Schierke, 
+>	<br>
 </div2>
-
-
 
 
 <script> /*allows expand tab*/
