--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 					<th><a href="html/media.html">Media</a></th>
 					<th><a href="html/blog.html">Blog</a></th>
 					<th><a href="html/philosophical_ideas.html">Philosophy</a></th>
+					<th>TV Project - <a href="https://www.toonamiaftermath.com/">Toonami</a></th> 
 				</tr>
 			</table>
 
