--- a/html/media.html
+++ b/html/media.html
@@ -125,23 +125,19 @@
 
 <br>
 <b>Characters List</b> <br>
->Strat1: Breakdown 16 slots <br>
->Strat2: Min# of slots per category <br>
->Strat3: If "love" applies, add them <br>
->Strat4: Do I want to see this character here?
-Do strat3 up until strat1 limit, then write in words <br>
+
 <br>
 FGC: I-No, Giovanna, Leo Whitefang <br>
 
 Anime: 
->Kagura, Yomi, Sasaki <br>
+
 >Any golden boy character <br>
 <br>
 
->Anime & Manga: Hawkeye, Misato, Robin, Garou, Wiz, Noi[Nikaido], Himeno, Kagura, Sasaki, Akane<br>
->Games: Aoko, Artemis, Alma, Mia Fey, FGC, Persona Character <br>
+>Anime & Manga: >Any golden boy character Kagura, Yomi, Sasaki, Akane<br>
+>Games: FGC, Persona Character <br>
 >Series: Lupin III[Jigen], Jujutsu Kaisen[Todo], Trigun[Milly], Jojo's[Mista], Cowboy Bebop[Faye], Samurai Champloo[Fu] <br>
->Manga: Guts, Schierke, 
+>Manga: 
 >	<br>
 </div2>
 
