Currently viewing tab

--- a/html/media.html
+++ b/html/media.html
@@ -83,8 +83,14 @@
 </div1>
 
 <div2 style="text-align:left; padding-left:50px">
-<h2>\Favorites/</h2> <br>
+<h2>\Currently Viewing/</h2> 
+>Reading: Western esotericism: A guide for the perplexed <br>
+>Manga: Berserk <br>
+>Watching: CyberSix <br>
+>Playing Shin Megami Tensei III -> Signalis -> P3R<br>
+
 <br>
+<h2>\Favorites/</h2>
 <b><a href="../images/Music_of_all_time.png">Music</a></b> <br>
 >King Gizzard and The Lizard Wizard <br>
 >Tupperware Remix Party <br>
