--- a/html/diet.html
+++ b/html/diet.html
@@ -22,22 +22,37 @@
 
 <div class="centerpiece">
 <div1 style="text-align:left">
-
+&emsp;
 <h2>>meals I know how to cook: </h2>
->hamburgers <br>
+>Hamburgers <br>
 >Pasta Sauce <br>
 >Tacos/Tostadas <br>
+>Pulled Pork <br>
+>Slow Cooker Roast Beef <br>
+>Casserole Mac n' Cheese <br>
+>Oatmeal <br>
+>Stir Fry <br>
+>Sandwich
+
+
+<br><br>
+>5 divine meal combinations (spammable): <br>
+>1.Pasta & Sauce <br>
 
 <h2>Pantry Contents</h2>
-><b>Spice Rack</b>: <br>
-><b>Sauces</b>: <br>
+><b>Spice Rack</b>: Kosher Salt, Black Pepper, Chili Powder, Red Cayenne Pepper, Paprika, Cumin, Coriander, Cinnamon, [Red Pepper Flakes, Basil, Thyme, Oregano], Onion Powder, Garlic Powder<br>
+><b>Sauces</b>: Rice Vinegar, Fish Sauce, Shaoxing Wine, Soy Sauce, Sesame Oil, Mirin, White Wine Vinegar, Worcestershire, Vanilla Extract, Frank's Red Hot<br>
+
+<h2>Food to try</h2>
+>Rice pilaf main (add meat and veggies, cook in pot) <br>
+>Imroved rice: Veggie/Chicken Broth(mixed with water), Herbs, Lime, Garlic/Onion Powder, Chili or Curry seasoning. <br>
+>Adobo Chicken & Adobo Fried Rice
 
 <h2>Cooking Strats</h2>
-><b>Basic Template</b>: Seasoning Technique -> Protein[Chicken, Beef, Pork, Turkey] -> Form Factor[Sandwich/Salad/Over Rice/Pasta/Wrap] -> <br>
-&emsp; Condiments/Toppings[Sauce, Herb, Pickled Veggies, Chili Oil, Salsa, Salad Dressing] 
+><b>Basic Template</b>: Seasoning Technique -> Protein[Chicken, Beef, Pork, Turkey] -> Form Factor[Sandwich/Salad/Over Rice/Pasta/Wrap] -> Condiments/Toppings[Sauce, Herb, Pickled Veggies, Chili Oil, Salsa, Salad Dressing] 
 <br>
 
-><h3>Freezing to avoid hahving food go bad</h3>
+<h3>Freezing to avoid having food go bad</h3>
 ><b>Freezing Meat: </b> Freezer Bags[Thin cut chicken; Sausage Mix; Portion Sized Meat; Stir Fry] <br>
 ><b>Freezing Vegetables: Stir fry filler; Meal Side</b> <br>
 </div1>
