--- a/html/esotericism.html
+++ b/html/esotericism.html
@@ -28,7 +28,72 @@
 	>astrology <br>
 	>rune magic <br>
 	>kabbalah <br>
+
+
+	<h2>Wester Esotericism: A Guide for the perplexed</h2>
+	<b>Chapter 1</b><br>
+	>Influential Models for the Study of Esotericism <br>
+	>1.Early modern enchantment, manifestation of romanticism <br>
+	>2.As a contemporary element of (post)modernity <br>
+	&emsp; "When sociologists first began studying the
+	occult during the 1960s and 1970s, they saw it as a surprising
+	and somehow disconcerting phenomenon of social ‘deviance’
+	concerned with ‘anomalous’ claims of knowledge that seemed to
+	reflect a movement of youthful rebellion against science and estab-
+	lished religion.10 They had trouble seeing anything else in it than a
+	heartfelt but obviously futile reaction against rationalization and
+	the forward march of modernity. In more recent years, however,
+	sociologists and historians of religion have begun to see the occult
+	as a significant manifestation of modernity.11 Predictions about the
+	imminent demise of religion have turned out to be premature, to
+	say the least; and it has become ever more evident that esoteric or
+	occult currents are a permanent feature of modern culture." <br><br>
+
+	&emsp; "In current scholar-ship, the occult is therefore no longer 
+	perceived as a marginal and irritating anomaly – something that 
+	‘should not be there’ – but, on the contrary, as a highly 
+	important manifestation of how religion is continuously being 
+	reinvented under new historical and social con-ditions." <br><br>
+
+	>3.Inner Traditions, represent some shared inner truth about the world <br>
+	&emsp; Problems: Scientifically unverifiable, science is necessarily exoteric <br><br>
+
+	>Books theme:
+	&emsp;  In sum
+	in the rest of this book we will be studying a large and complicated
+	field of research that (1) has been set apart by mainstream religious
+	WESTERN ESOTERICISM: A GUIDE FOR THE PERPLEXED14
+	and intellectual culture as the ‘other’ by which it defines its own
+	identity, and (2) is characterized by a strong emphasis on specific
+	worldviews and epistemologies that are at odds with normative
+	post-Enlightenment intellectual culture. 
+		
 </div1>
+
+<div2>
+
+<h2>Astrology - A History of Western Astrology Volume 1</h2>
+<b>Intro/Definitions</b> <br>
+>two types of astrology: specific intending to divine specific events, and broad or nonspecific <br>
+<br>
+<b>Chapter 1</b> <br>
+>Astrology is marked by the search for meaning in the sky, amongst the stars and planets and in the sun and moon." <br>
+>The day and night cycle, along with the movements of the Sun and the Moon were important to early human life <br>
+>Makes sense that they would be absorbed into story-telling to make sense of the world <br>
+>Think more deeply about the effect that the removal of true night has had on how we liver <br>
+>Very interesting that the cycle of the moon is almost regular at about every 28 days <br>
+>Keeping track of the lunar cycle probably led to more *awareness* of time passing, could be a fun experiment nowadays <br>
+>SMT mechanic of moon cycling is kinda cool with this in mind <br>
+>"Or rather, we should say, human life was tied to the natural environment which
+itself included the stars as much as plants, stones and animals. There was, it seems
+a high regard for the powers of the sky, a celestial theology' in which human life
+was tied to the heavens." <br>
+>Transition from lunar tracking to stellar, where stars were next to be analysed (example: herald of day/night <br>
+>The Pleiades, the bright star cluster visible to the naked eye, has myths all across the globe) <br>
+<br>
+
+
+</div2>
 
 </body>
 </html> 
