--- a/html/exercise.html
+++ b/html/exercise.html
@@ -24,6 +24,12 @@
 <div1 style="text-align:left">
 
 6 Kettlebell Exercises
+
+<h2>Deep Squat - <a href="https://youtu.be/P_4CL4VS3Ug">Link</a></h2>
+
+<h2>Counter Sitting</h2>
+>Hamstrings 1 leg forward lean <a href="https://www.youtube.com/watch?v=iG7Z4F14ijs">Link</a><br>
+>Hip Flexors <br>
 </div1>
 
 </body>
