--- a/html/media.html
+++ b/html/media.html
@@ -38,11 +38,17 @@
 	<tr><td>
 		<table>
 			<th><img src="../images/Reviews/fmab-cover.jpg" width=200px></th>
-			
 			<th style="width: 250px;">Name: Fullmetal Alchemist Brotherhood <br><br> Date: April 5, 2009 <br><br> Creator: Hiromu Arakawa, Animated by Bones <br><br> score: 10/10 <br><br> Favorite Character: Riza Hawkeye <br><br> </th>
-
 			<th style="width: 700px;">>phenomenal </th> 
 		</table>
+	</td></tr>
+	<tr><td>
+		<table>
+			<th><img src="../images/Reviews/smt3.jpg" width=200px></th>
+			<th style="width: 250px;">Name: Shin Megami Tensei 3 Nocturne <br><br> Date: February 20, 2003 <br> Finished: June 04, 2024 <br><br> Creator: Atlus <br><br> score: strong 9/10 <br><br> Favorite Character: Chiaki <br><br> </th>
+			<th style="width: 700px;">Thoughts: Completed the True Demon route. 1.boss fights are personal and cool 2.vibe is demonic/edgy & cool 3.found some demons I love, they are my friends 4. mysticism</th>
+		</table>
+	</td></tr>
 </table>
 
 <h2>Characters I love: </h2>
