--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<b><a href="html/mythology.html">\Mythology/</a></b>  <br>
 			<b><a href="html/esotericism.html">\Esotericism/</a></b>  <br><br>
 			
-			<b><a href="html/food.html">Food</a></b>  <br>
+			<b><a href="html/diet.html">Food</a></b>  <br>
 			<b><a href="html/exercise.html">Exercise</a></b>  <br><br>
 
 			<b><a href="html/botany.html">Botany</a></b>  <br>
