--- a/html/fighting-game.html
+++ b/html/fighting-game.html
@@ -23,6 +23,37 @@
 <div class="centerpiece">
 <div1 style="text-align:left">
 
+<h2>Honda Guide</h2>
+
+<b>Combos/Strings</b>
+>bnb1: 4LK >4LP >4MP >[Headbutt, Hands w/ buff, Triple Slap] <br>
+>bnb2: 2LP > 2LP > Headbutt <br>
+
+<br>
+<b>Buff Setups/ - Two types, pre-juggle and post-juggle</b>
+>Go into off basic combo. Juggle/Far: Headbutt -> buff(this is a little slow) <br><br>
+5MP > [CLose]Buff Hands(mashable) > 2LK -> Headbutt -> Buff <br>
+
+1. 5LP > 5MP > 214HP[buff] > Headbutt <br>
+2. 5MP > 214HP[buff] > 2LK > Headbutt <br>
+
+<br>
+<b>Cannon Lift - How to get into other than 5HK?</b> <br>
+>5HP cancel > Cannon Lift >  <br>
+>Drive rush > Stomp >  Buff > Oki <br>
+
+5HP on block -> frame trap: EX triple slap <br>
+
+<br>
+<b>Post-Headbutt</b>
+>On block: 5mp >drive rush
+
+<br>
+<b>Post-Buttslam</b>
+>On block
+> Dash-up Command Grab
+> Dash-up bnb1
+
 </div1>
 
 </body>
