--- a/html/media.html
+++ b/html/media.html
@@ -93,7 +93,7 @@
 >Reading: Western esotericism: A guide for the perplexed <br>
 >Manga: Berserk <br>
 >Watching: CyberSix <br>
->Playing Shin Megami Tensei III -> Signalis -> P3R<br>
+>Playing Signalis -> P3R<br>
 
 <br>
 <h2>\Favorites/</h2>
