Links to eastern philosophy

--- a/html/diet.html
+++ b/html/diet.html
@@ -64,7 +64,7 @@
 <br>
 
 <h3>Freezing to avoid having food go bad</h3>
-><b>Freezing Meat <a href="https://youtu.be/YQc4vxdHmpY">Link</a>: </b> Freezer Bags[Thin cut chicken; Sausage Mix; Portion Sized Meat; Stir Fry] <br>
+><b>Freezing Meat <a href="https://youtu.be/YQc4vxdHmpY">Link</a>: </b> Freezer Bags[Thin cut chicken; Sausage Mix <a href="../images/Recipes/northern-thai-sausage.png"> Thai</a>; Portion Sized Meat; Stir Fry] <br>
 ><b>Freezing Vegetables <a href="https://youtu.be/XlndcLo3j7I">Link</a> </b> Stir fry filler; Meal Side <br>
 >I'd like to continue expanding my knowledge of freezing techniques, get to the point where an antiquity man would be jealous of me
 </div1>
