--- a/html/eastern_philosophy.html
+++ b/html/eastern_philosophy.html
@@ -9,7 +9,7 @@
 <div>
 <h1>Wizard's Philosophical Ponderings</h1>
 	<b class="smallMargins">philosophy - status:</b>
-	<p class="smallMargins">glad this is full</p>
+	<p class="smallMargins">glad this is </p>
 	<table>
 		<tr>
 			<th><a href="../index.html">Home</a></th>
@@ -22,10 +22,47 @@
 
 <div class="centerpiece">
 <div1 >
-	
+	<h2>Reading List</h2>
+	<p>As I explore this tradition, and any other of sufficient depth or obscurity, commentaries are important to interpret the text</p>
+
+	<br><br>
+	Main topics <br>
+	<b>Orthodox Indian Philosophical School</b> - Hinduism/Sanatana Dharma  <br>
+	>Primary texts: The Vedas & The Upanishads; <a href="https://www.swami-krishnananda.org/bs_0/Brahma_Sutra.pdf">Brahma Sutras</a>; The Baghavad Gita; Patanjali's <a href="https://www.gutenberg.org/files/2526/2526-h/2526-h.htm">Yoga Sutras</a> <br>
+	>Commentaries of the Baghavad Gita by Vedanta Schools: <br> 
+	&emsp; Shankara-Advaita Vedanta (Non-Dualistic) <a href="https://estudantedavedanta.net/Bhagavad-Gita.with.the.Commentary.of.Sri.ShankaracharyaN.pdf">The Bhagavad Gita With the Commentary of Sri Sankaracharya</a> <br> 
+	&emsp; Ramanuja-Vishishtadvaita Vedanta <a href="http://www.srimatham.com/uploads/5/5/4/9/5549439/ramanuja_gita_bhashya.pdf">Gita Bhasya (not certain of quality)</a> <br>  
+	&emsp; Madhva-Dvaita Vedanta (Dualistic)  <br>
+	>Commentaries by modern authors: <br> 
+
+	<br><br>
+	<b>Buddhism</b> - Non-orthodox Indian Philosophical School <br>
+	<b>Theravada buddhism</b>: The establishment of the fundamental ideas at play. The buddha's direct teachings as primary resource <br>
+	>Primary Texts: The Pali Canon (Tipitaka), the Sutta Tipitaka: 
+	<a href="https://www.accesstoinsight.org/tipitaka/dn/index.html">Digha Nikaya</a>, 
+	<a href="https://accesstoinsight.org/tipitaka/mn/">Majjhima Nikaya</a>, 
+	<a href="https://accesstoinsight.org/tipitaka/sn/">Samyutta Nikaya</a>, 
+	<a href="https://accesstoinsight.org/tipitaka/an/">Anguttara Nikaya</a> <br><br>
+
+	<b>Mahayana buddhism</b>: A further evolution of buddhism in some senses, generally keeps the framework but emphasis on new interesting ideas <br>
+	>Texts: <a href="https://thebuddhistcentre.com/system/files/groups/files/heart_sutra.pdf">Heart Sutra</a> <br>
+	>Nagarjuna's Works (
+	<a href="http://www.rigdzindharma.org/uploads/6/9/5/6/6956478/nagarjunalettertoafriend.pdf">Suhṛllekha</a>: Letter to a Good Friend; <a href="http://www.buddhism.org/Sutras/2/Sutras5.htm">Sunyatasaptati</a>: 70 verses on Sunyata/emptiness; !hard Mūlamadhyamakakārikā: The Fundamental Wisdom of the Middle Way) <br>
+	>Shantideva (<a ref="https://www.lotsawahouse.org/indian-masters/shantideva/bodhicharyavatara-1">Bodhicaryavatara</a>: A Guide to the Bodhisattva's Way of Life; Śikṣāsamuccaya: Training Anthology) <br>
+	>Candrakirti(Theory of Two-Truths): Madhyamakāvatāra <br>
+	 
+	<br>
+	>Jainism and Samkhya are two schools I don't know much about <br>
+
+
+
+	<b>Taoism</b>
+	>Tao Te Ching <br>
+
 </div1>
 
 <div2>
 </div2>
+
 </body>
 </html> 
