--- a/html/aesthetic_ideas.html
+++ b/html/aesthetic_ideas.html
@@ -21,9 +21,34 @@
 	</table>
 </div>
 
-<div class="container">
-	<div1>
-	</div1>
+<div class="centerpiece">
+<h2>Games</h2>
+<b>Chao Garden/Dragon City chill environment to hang out with little guys</b> <br>
+>Creature evolutions/types - <a href="https://chao-island.com/info-center/life-cycle/evolution">Chao</a> <br>
+><a href="../images/game-project/gardens-sa2-chao.png">field</a>/natural environments <br>
+>n64/low-poly artstyle <br>
+>Minigames of my choice, gambling, bug fights
+>moddable <br>
+>Gameplay ideas: Duck Life progression, <br>
+
+<br>
+<b>canvas/environment/engine in which things of a broad spectrum can be added. i.e. ultrakill</b>
+
+<br><br>
+<h2>How to choose a medium in which to create art?</h2>
+<b>Visual Arts</b> <br>
+>Analog: Illustration, primarily via pencil <br>
+>Digital: Digital Illustration, using Krita <br>
+>3D - Blender for 3d modelling <br>
+
+<br>
+<b>Literary Arts</b> <br>
+>I'd like the ability to conceive of cool narrative, though maybe analysis will suffice for now. <br>
+>I admire interesting prose <br>
+>I think attributing literary qualities to current art is cool in an age of spam-content <br>
+
+<b>Rotating between them keeps me mentally engaged, they can all feed back in to one another too.</b> 
+
 </div>
 
 </body>
