--- a/html/eastern_philosophy.html
+++ b/html/eastern_philosophy.html
@@ -33,7 +33,6 @@
 	&emsp; Shankara-Advaita Vedanta (Non-Dualistic) <a href="https://estudantedavedanta.net/Bhagavad-Gita.with.the.Commentary.of.Sri.ShankaracharyaN.pdf">The Bhagavad Gita With the Commentary of Sri Sankaracharya</a> <br> 
 	&emsp; Ramanuja-Vishishtadvaita Vedanta <a href="http://www.srimatham.com/uploads/5/5/4/9/5549439/ramanuja_gita_bhashya.pdf">Gita Bhasya (not certain of quality)</a> <br>  
 	&emsp; Madhva-Dvaita Vedanta (Dualistic)  <br>
-	>Commentaries by modern authors: <br> 
 
 	<br><br>
 	<b>Buddhism</b> - Non-orthodox Indian Philosophical School <br>
@@ -54,10 +53,12 @@
 	<br>
 	>Jainism and Samkhya are two schools I don't know much about <br>
 
+	<br>
+	<b>Chinese Philosophy</b> <br>
+	>Taoism: Tao Te Qing <br>
+	>Confucianism: <br>
+	>Buddhism(Chan) <br>
 
-
-	<b>Taoism</b>
-	>Tao Te Ching <br>
 
 </div1>
 
