--- a/html/blog.html
+++ b/html/blog.html
@@ -23,10 +23,17 @@
 <div class="centerpiece">
 <div1 style="text-align:center">
 
+<b>2024-06-08</b> <br>
+>Limiting the scope of activities to actually get stuff done. <br>
+>"Creativity is subtraction"; "In this age of information abundance and overload, those who get ahead will be the folks who figure out what to leave out, so they can concentrate on what’s really important to them. Nothing is more paralyzing than the idea of limitless possibilities. The idea that you can do anything is absolutely terrifying." <br>
+>Constratins that'd help me? fits into larger question of daily planning
+
+<br>
 <b>2024-06-02</b> <br>
 >main site pages are done, I am free to add to them as I please. Most topics have a page <br><br>
->small features to add: click-dragons,
+>small features to add: click-dragons, <br>
 
+<br>
 <b>2024-05-31</b> <br>
 >WorkList: <br>
 <s>>homepage: Center and add side borders </s><br>
