--- a/html/botany.html
+++ b/html/botany.html
@@ -23,6 +23,13 @@
 <div class="centerpiece">
 <div1 style="text-align:left">
 
+
+<h2>Mushroom Growing</h2>
+
+>Inoculating a jar <br>
+>Petri dish prep <br>
+
+
 </div1>
 
 </body>
