--- a/html/exercise.html
+++ b/html/exercise.html
@@ -29,7 +29,12 @@
 
 <h2>Counter Sitting</h2>
 >Hamstrings 1 leg forward lean <a href="https://www.youtube.com/watch?v=iG7Z4F14ijs">Link</a><br>
->Hip Flexors <br>
+>Hip Flexors - Lotus pose<br>
+
+
+<h2>Boxing</h2>
+<h2>Adding kicks</h2>
+
 </div1>
 
 </body>
