--- a/html/media.html
+++ b/html/media.html
@@ -49,6 +49,13 @@
 			<th style="width: 700px;">Thoughts: Completed the True Demon route. 1.boss fights are personal and cool 2.vibe is demonic/edgy & cool 3.found some demons I love, they are my friends 4. mysticism</th>
 		</table>
 	</td></tr>
+	<tr><td>
+		<table>
+			<th><img src="../images/Reviews/samurai-jack.jpg" width=200px></th>
+			<th style="width: 250px;">Name: Samurai Jack Season 5 <br><br> Date: 2017 <br> Finished: Watched As It Aired <br><br> Creator: Genndy Tartakovsky <br><br> score: 10/10 <br><br> Favorite Character: Jack, incredible character <br><br> </th>
+			<th style="width: 700px;"> </th>
+		</table>
+	</td></tr>
 </table>
 
 <h2>Characters I love: </h2>
@@ -71,13 +78,12 @@
 		<th><img src="../images/Character-Board/wiz.jpg" style="height:225px;"> <br>Wiz</th>
 		<th><img src="../images/Character-Board/alma.png" style="height:225px;"> <br>Alma Armas</th>
 	</tr>
-	<tr> <!-- Lower Tier -->
+	<tr>
 		<th><img src="../images/Character-Board/guts.jpg" style="height:225px;"> <br>Guts</th>
 		<th><img src="../images/Character-Board/schierke.jpg" style="height:225px;"> <br>Schierke</th>
 		<th><img src="../images/Character-Board/mista.png" style="height:225px;"><br> Mista </th>
 		<th><img src="../images/Character-Board/mia-fey1.jpg" style="height:225px;"> <br>Mia Fey</th>
 	</tr>
-	<tr>
 	<tr>
 		<th></th>
 		<th></th>
@@ -86,14 +92,46 @@
 	</tr>
 </table>
 
+<br>
+<b>Characters List</b> <br>
+
+<br>
+FGC: I-No, Giovanna, Leo Whitefang <br>
+
+Anime: 
+
+>Any golden boy character <br>
+<br>
+
+>Anime & Manga: >Any golden boy character Kagura, Yomi, Sasaki, Akane<br>
+>Games: FGC, Persona Character <br>
+>Series: Lupin III[Jigen], Jujutsu Kaisen[Todo], Trigun[Milly], Jojo's[Mista], Cowboy Bebop[Faye], Samurai Champloo[Fu] <br>
+>Manga:  <br>
+>	<br>
+
 </div1>
 
 <div2 style="text-align:left; padding-left:50px">
 <h2>\Currently Viewing/</h2> 
->Reading: Western esotericism: A guide for the perplexed <br>
->Manga: Berserk <br>
->Watching: CyberSix <br>
+>Reading: Western esotericism: A guide for the perplexed; Monkey <br>
+>Manga: Berserk, Sakamoto Days <br>
+>Watching: CyberSix, Dungeon Meshi <br>
 >Playing Signalis -> P3R<br>
+
+<br>
+<b>Book List - 1 chapter per day or 1 book per 2 weeks</b>
+>Selection: <br>
+
+<br>
+<b>2024 Games List</b> <br>
+>Signalis <br>
+>Persona 3 Reload <br>
+>Risk of Rain Returns <br>
+>Yakuza Kiwami 1 <br>
+>Elden Ring <br>
+>Dragon Quest XI <br>
+>Nier Replicant <br>
+>FF7R <br>
 
 <br>
 <h2>\Favorites/</h2>
@@ -135,22 +173,128 @@
 >One-Punch Man <br>
 >DanDaDan <br>
 
-<br>
-<b>Characters List</b> <br>
+<br><br>
+<b>MyAnimeList: Anime</b> <br>
+>Cowboy Bebop<br>
+>Samurai Champloo<br>
+>FLCL<br>
+>Golden Boy<br>
+>Gurren Lagann <br>
+>Fullmetal Alchemist Brotherhood<br>
+>Inferno Cop<br><br>
+>Apothecary Diaries <br>
+>Neon Genesis Evangelion <br>
+>Azumanga Daiou <br>
+>Initial D <br>
+>Lupin III <br>
+>Ghost in the Shell: Stand Alone Complex <br>
+>Black Lagoon <br>
+>Lupin III <br>
+>Baccano <br>
+>Monogatari Series <br>
+>Tatami Galaxy <br>
+>Panty & Stocking with Garterbelt <br>
+>Steins Gate <br>
+>Persona 4 The Animation <br>
+>Kill La Kill <br>
+>Jojo's Bizarre Adventure <br>
+>Re:Creators <br>
+>Made in Abyss <br>
+>Yuru Camp <br>
+>Tsurezure Children <br>
+>Girls Last Tour <br>
+>Trigun <br>
+>Naruto <br>
+>One Punch Man <br>
+>Devilman Crybaby <br>
+>Land of the Lustrous <br>
+>Bunny Girl Senpai <br>
+>Lucky Star <br>
+>Angel Beats <br>
+>Monster Musume <br>
+>Grand Blue <br>
+>Dorohedoro <br>
+>Konosuba <br>
+>Dr. Stone <br>
+>Jujutsu Kaisen <br>
+>Bleach: The Thousand Year Blood War <br>
 
 <br>
-FGC: I-No, Giovanna, Leo Whitefang <br>
+<b>Movie</b><br>
+&thinsp;>Promare <br>
+&thinsp;>Evangelion Rebuilds 1.0, 2.0 & 3.0 <br>
+&thinsp;>Evangelion 3.0+1.0 <br>
+&thinsp;>Ghost in the Shell <br>
+&thinsp;>Akira <br>
+&thinsp;>Redline <br>
+&thinsp;>Interstella 5555 <br>
+&thinsp;>Dragon Ball Super: Broly <br>
+&thinsp;>Dragon Ball Super Heroes <br>
+&thinsp;>Your Name <br>
+&thinsp;>Night Is Short Walk On Girl <br>
 
-Anime: 
 
->Any golden boy character <br>
 <br>
+<b>Studio Ghibli</b>  <br>
+&thinsp; >Porco Rosso <br>
+&thinsp; >Princess Mononoke <br>
+&thinsp; >Kiki's Delivery Service <br>
+&thinsp; >My Neighbor Totoro <br>
+&thinsp; >Spirited Away <br>
 
->Anime & Manga: >Any golden boy character Kagura, Yomi, Sasaki, Akane<br>
->Games: FGC, Persona Character <br>
->Series: Lupin III[Jigen], Jujutsu Kaisen[Todo], Trigun[Milly], Jojo's[Mista], Cowboy Bebop[Faye], Samurai Champloo[Fu] <br>
->Manga: 
->	<br>
+
+<!--
+>K-On <br>
+>Recovery of an MMO Junkie <br>
+>Interviews with Monster Girls <br>
+>SAO Alternative: Gun Gale Online <br> 
+-->
+
+
+
+<br><br>
+<b>MyAnimeList: Manga</b> <br>
+>One Piece <br>
+>Berserk <br>
+>Blame! <br>
+>Yotsuba& <br>
+>Eyeshield 21 <br>
+>Jojo's Parts 7 & 8 <br>
+>Girls' Last Tour <br>
+>Grappler Baki <br>
+>Tomo-chan Is A Girl <br>
+>Teppuu <br>
+>Chainsaw Man <br>
+>Jujutsu Kaisen <br>
+>Dungeon Meshi <br>
+>DanDaDan <br>
+>Shimeji Simulation <br>
+>Sun-Ken Rock <br>
+>Smoking Behind the Supermarket with You <br>
+>Dragon Ball <br>
+>Bleach <br>
+>One-Punch Man <br>
+>Monster Musume <br>
+
+
+<br><br>
+<b>The Up-Next List: Art I'd Like to View (and ideally finish)</b> <br>
+>20th century boys<br>
+>Monster<br>
+>Golden Kamuy <br>
+>Grand Blue (Manga) <br>
+>Hajime No Ippo <br>
+>Great Teacher Onizuka <br>
+>Sakamoto Days <br>
+>Sayonara Eri <br>
+>Frieren <br>
+>Vinland Saga <br>
+>Vagabond <br>
+>Yu Yu Hakusho <br>
+>Mushishi <br>
+!>Slam Dunk <br>
+
+
 </div2>
 
 
