--- a/html/botany.html
+++ b/html/botany.html
@@ -30,6 +30,22 @@
 >Petri dish prep <br>
 
 
+<h2>MLE Agar Recipe & Process </h2>
+Ingredients: <br>
+<ul>
+	<li>500ml Distilled Water</li>
+	<li>10g Agar-Agar Powder</li>
+	<li>7.5g Light Malt Extract</li>
+</ul>
+
+Steps: <br>
+<ul>
+	<li>Boil Water</li>
+	<li>Mix dry components into water</li>
+	<li>Add to bottle and add food colouring</li>
+	<li>Steam bath for 90 minutes</li>
+</ul>
+
 </div1>
 
 </body>
