--- a/html/esotericism.html
+++ b/html/esotericism.html
@@ -28,6 +28,9 @@
 	>astrology <br>
 	>rune magic <br>
 	>kabbalah <br>
+	>writing systems as magic<br>
+<br><br>
+	>Hanegraaff - Western Esotericism: A Guide for the Perplexed <br>
 
 
 	<h2>Wester Esotericism: A Guide for the perplexed</h2>
