--- a/html/media.html
+++ b/html/media.html
@@ -218,6 +218,12 @@ Anime:
 >Dr. Stone <br>
 >Jujutsu Kaisen <br>
 >Bleach: The Thousand Year Blood War <br>
+>Space Dandy <br>
+>Hunter x Hunter <br>
+>Ranma 1/2 <br>
+>Serial Experiments Lain <br>
+>Gunsmith Cats <br>
+>Cyberpunk Edgerunners <br>
 
 <br>
 <b>Movie</b><br>
@@ -277,6 +283,7 @@ Anime:
 >Monster Musume <br>
 
 
+
 <br><br>
 <b>The Up-Next List: Art I'd Like to View (and ideally finish)</b> <br>
 >20th century boys<br>
@@ -293,6 +300,23 @@ Anime:
 >Yu Yu Hakusho <br>
 >Mushishi <br>
 !>Slam Dunk <br>
+>Cowboy Bebop: The Movie <br>
+>Fate/Stay Night 3 routes
+>Flying Witch <br>
+>Katanagatari <br>
+>Kekkai Sensen <br>
+>Gundam (OG, Iron Blooded Orphans, GWitch) <br>
+>Megalo Box <br>
+>Non non Byiori <br>
+>Soul Eater <br>
+>Haruhi Suzumiya <br>
+>Index & Railgun <br>
+>Code Geass <br>
+>Urusei Yatsura <br>
+>Maison Ikkoku <br>
+>Inuyasha <br>
+>Arakawa Under the Bridge <br>
+>Pluto <br>
 
 
 </div2>
