--- a/html/mythology.html
+++ b/html/mythology.html
@@ -30,9 +30,15 @@
 	<h3>The Odyssey by Homer</h3>
 	<h3>The Aeneid by Virgil </h3>
 	<h3>The Poetic & The Prose Edda: <br>&emsp; <a href="https://gutenberg.org/files/14726/14726-h/14726-h.htm">The Elder Eddas of Saemund Sigfusson; and the Younger Eddas of Snorre Sturleson, by Saemund Sigfusson and Snorre Sturleson</a></h3>
-	<h3>Beowulf - Gutenberg: <br> &emsp;<a href="https://www.gutenberg.org/files/16328/16328-h/16328-h.htm">Beowulf
-An Anglo-Saxon Epic Poem, Translated From The Heyne-Socin Text by Lesslie Hall</a> <br> &emsp;<a href="https://www.gutenberg.org/files/50742/50742-h/50742-h.htm">The Story of Beowulf (2015)</h3>
+	<h3>Beowulf - Gutenberg: <br> &emsp;
+		<a href="https://www.gutenberg.org/files/16328/16328-h/16328-h.htm">Beowulf
+An Anglo-Saxon Epic Poem, Translated From The Heyne-Socin Text by Lesslie Hall</a> 
+		<br> &emsp;
+		<a href="https://www.gutenberg.org/files/50742/50742-h/50742-h.htm">The Story of Beowulf (2015)</a> <br>
+	</h3>
+
 	<h3>Egyptian Mythology - Thoth</h3>
+	<h3>Journey to the West - Monkey: Folk Tale of China by Arthur Waley</h3>
 </div1>
 
 </div>
