--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 					<th><a href="html/media.html">Media</a></th>
 					<th><a href="html/blog.html">Blog</a></th>
 					<th><a href="html/philosophical_ideas.html">Philosophy</a></th>
+					<th><a href="html/calendar.html">Calendar</a></th>
 					<th>TV Project - <a href="https://www.toonamiaftermath.com/">Toonami</a></th> 
 				</tr>
 			</table>
