--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div1 >
 			<h1>Wizard Home - Welcome to ponderlands</h1>
 			<b class="smallMargins">home - status:</b>
-			<p class="smallMargins">mmmmmm</p>
+			<p class="smallMargins">mmmmm</p>
 			<table>
 				<tr>
 					<th><a href="index.html">Home</a></th>
