Eastern philo reading list

--- a/html/esotericism.html
+++ b/html/esotericism.html
@@ -24,15 +24,22 @@
 <div1>
 	<h2>topics</h2>
 	<a href="https://www.justinsledge.com/esoterica-library">Reading List - Western Esotericism</a> <br>
-	>alchemy - not that interested in the end, basic chemistry that has simply been outclassed <br>
-	>astrology <br>
-	>rune magic <br>
-	>kabbalah <br>
-	>writing systems as magic<br>
-<br><br>
-	>Hanegraaff - Western Esotericism: A Guide for the Perplexed <br>
+	<b>Topics of interest</b><br>
+	>Esotericism as a whole and its philosophical implicaitons <br>
+	&thinsp; Hanegraaff - Western Esotericism: A Guide for the Perplexed <br>
+	>Astrology <br>
+	&thinsp; Brennan - Hellenistic Astrology: The Study of Fate and Fortune <br>
+	&thinsp; Campion - A History of Western Astrology Volume I <br>
+	&thinsp; Campion - A History of Western Astrology Volume II <br>
+	>Kabbalah & the sefirot <br>
+	>Rune & writing systems as magic <br>
+	>Hermeticism <br>
+	&thinsp; Salaman - The Way of Hermes <br>
+	>Gods of various cultures(egyptian, norse) & their functions <br>
+	?>Alchemy (only slightly, mostly inspired by FMA imagery, transmutation circles) <br>
+    ?>Gnosticism <br>
 
-
+	<br>
 	<h2>Wester Esotericism: A Guide for the perplexed</h2>
 	<b>Chapter 1</b><br>
 	>Influential Models for the Study of Esotericism <br>
