--- a/html/philosophical_ideas.html
+++ b/html/philosophical_ideas.html
@@ -24,6 +24,28 @@
 <div1 >
 	<p>summaries of important topics, with links to further pages in headers</p>
 	<h1>Major Philosophical Schools & Authors</h1> <br>
+	<p>By philosophy, I mean the study of ideas engaged with in the world in order to act on them in a logically consistent manner. <br>
+		
+		Why am I interested in philosophy? Generally, making wise decisions involves having the pre-requisite knowledge of the situation at hand. 
+		I think this serves as a good metaphor for the use of philosophy in daily living. There are fundamental assumptions about the working of the world, 
+		held by all, but philosophy puts those ideas to the test of critical analysis, so that the way in which we live can be justified and directed to
+		better/intended outcomes.
+
+	</p>
+	<p>What's my approach in dividing these? Generally, philosophical schools have presented ideas in works of varying size all across the globe.
+		In exploring these traditions, there are some methodologies that could be followed. <br>
+		-Select a variety of traditions, though they will have to be written moreso  <br>
+		-Analyze them one at a time (one text or one idea), to try not to spread research too thin. Do I have the attention span to commit myself to a single work? <br>
+		-Strategy for choosing works?  <br>
+		&emsp;-Following schools in a progressive chronological/logical order; west(greek/arabic/enlightenment) vs east(india/china) <br>
+		&emsp;-Jumping between schools, selecting the most important works <br>
+
+		<br><br>
+		Ultimately it is up to me to design something like a curriculum, and even harder, to stick with it. Looking at Dr. K's stuff(honestly noting alot of it down),
+		to figure out what kind of learning is compatible with me. <br>
+		<br> I'm starting with eastern philosophy cause it's cooler, but swap to plato/aristotle as I crave it. Acknowledge it'll be tougher as I've kinda covered India before
+	</p>
+
 	<h1><a href="../html/eastern_philosophy.html">Eastern Philosophy</a></h1>
 	<h2>Hinduism/Brahmanism - The shared basic ideas of the philosophical traditions of the Indian subcontinent </h2>
 	<h2>Shankara</h2>
@@ -34,6 +56,7 @@
 
 	
 	<h1><a href="../html/western_philosophy.html">Western Philosophy</a></h1>
+	<h2>Plato</h2>
 	<h2>Aristotle</h2>
 	<h2>Arabic Philosophy - Trnalsation of classical texts</h2>
 	<h2>Descartes and all the theists ig</h2>
@@ -55,7 +78,7 @@
 	<h1>Historical/Mythological/Anthropological</h1>
 	<h2>Traditional Chinese Medecine - Ted Kaptchuk - The Web That Has No Weaver</h2>
 	<h2><a href="mythology.html">Mythology</a> and Shin Megami Tensei</h2>
-	<h2>Esotericism - Hermeticism</h2>
+	<h2><a href="../html/esotericism.html">Esotericism</a> - Hermeticism</h2>
 	<br>
 
 	<h1>General Ideas</h1>
