--- a/html/eastern_philosophy.html
+++ b/html/eastern_philosophy.html
@@ -22,13 +22,28 @@
 
 <div class="centerpiece">
 <div1 >
-	<h2>Reading List</h2>
-	<p>As I explore this tradition, and any other of sufficient depth or obscurity, commentaries are important to interpret the text</p>
+	<p>As I explore this tradition, and any other of sufficient depth or obscurity, <b>commentaries</b> will be important to interpret the text cause I don't have all the context 
+	to do that myself</p> <br>
+
+	<br>
+	<b>Curriculum - Comprehensive study of Indian philosophy</b> <br>
+	>Brahma Sutras(<a href="https://estudantedavedanta.net/Brahma%20Sutras%20-%20According%20to%20Sri%20Sankara%20by%20Swami%20Vireswarananda%20[Sanskrit-English].pdf">Shankara</a>; Ramanuja): Vedas & Upanishads (narrow selection to most relevant)<br>
+	&thinsp;>Vedas are not really studied anymore, fairly archaic <br>
+	&thinsp;>10 Upanishads: Isha, Kena, Katha, Chandogya, Mundaka, Brihadaranyaka, Prasna, Mandukya, Taittiriya, Aitareya <br>
+	&thinsp;Prof included parama-hamsa <br>
+	>Baghavad Gita (Shankara; Ramanuja) <br>
+	>Patanjali: Yoga Sutras - Uses Samkhya metaphysics <br>
+	>Optional schools (Samkhya - Samkhyakarika, Jainism) <br><br>
+	
+	>Theravada Buddhism & the sutta pitaka <br>
+	>Works of Nagarjuna - Mahayana Buddhism <br>
+
+	^find books that explain above, in a self-contained package <br>
 
 	<br><br>
-	Main topics <br>
+	<h2>Main topics</h2> <br>
 	<b>Orthodox Indian Philosophical School</b> - Hinduism/Sanatana Dharma  <br>
-	>Primary texts: The Vedas & The Upanishads; <a href="https://www.swami-krishnananda.org/bs_0/Brahma_Sutra.pdf">Brahma Sutras</a>; The Baghavad Gita; Patanjali's <a href="https://www.gutenberg.org/files/2526/2526-h/2526-h.htm">Yoga Sutras</a> <br>
+	>Primary texts: The Vedas & The Upanishads; <a href="https://www.swami-krishnananda.org/bs_0/Brahma_Sutra.pdf">Brahma Sutras</a>; The Baghavad Gita; Patanjali's <a href="https://www.gutenberg.org/files/2526/2526-h/2526-h.htm">Yoga Sutras - look into habit</a> <br>
 	>Commentaries of the Baghavad Gita by Vedanta Schools: <br> 
 	&emsp; Shankara-Advaita Vedanta (Non-Dualistic) <a href="https://estudantedavedanta.net/Bhagavad-Gita.with.the.Commentary.of.Sri.ShankaracharyaN.pdf">The Bhagavad Gita With the Commentary of Sri Sankaracharya</a> <br> 
 	&emsp; Ramanuja-Vishishtadvaita Vedanta <a href="http://www.srimatham.com/uploads/5/5/4/9/5549439/ramanuja_gita_bhashya.pdf">Gita Bhasya (not certain of quality)</a> <br>  
@@ -37,7 +52,7 @@
 	<br><br>
 	<b>Buddhism</b> - Non-orthodox Indian Philosophical School <br>
 	<b>Theravada buddhism</b>: The establishment of the fundamental ideas at play. The buddha's direct teachings as primary resource <br>
-	>Primary Texts: The Pali Canon (Tipitaka), the Sutta Tipitaka: 
+	>Primary Texts: The Pali Canon (Tipitaka), the Sutta Pitaka: 
 	<a href="https://www.accesstoinsight.org/tipitaka/dn/index.html">Digha Nikaya</a>, 
 	<a href="https://accesstoinsight.org/tipitaka/mn/">Majjhima Nikaya</a>, 
 	<a href="https://accesstoinsight.org/tipitaka/sn/">Samyutta Nikaya</a>, 
@@ -49,9 +64,6 @@
 	<a href="http://www.rigdzindharma.org/uploads/6/9/5/6/6956478/nagarjunalettertoafriend.pdf">Suhṛllekha</a>: Letter to a Good Friend; <a href="http://www.buddhism.org/Sutras/2/Sutras5.htm">Sunyatasaptati</a>: 70 verses on Sunyata/emptiness; !hard Mūlamadhyamakakārikā: The Fundamental Wisdom of the Middle Way) <br>
 	>Shantideva (<a ref="https://www.lotsawahouse.org/indian-masters/shantideva/bodhicharyavatara-1">Bodhicaryavatara</a>: A Guide to the Bodhisattva's Way of Life; Śikṣāsamuccaya: Training Anthology) <br>
 	>Candrakirti(Theory of Two-Truths): Madhyamakāvatāra <br>
-	 
-	<br>
-	>Jainism and Samkhya are two schools I don't know much about <br>
 
 	<br>
 	<b>Chinese Philosophy</b> <br>
